--- a/static/css/base.css
+++ b/static/css/base.css
@@ -31,7 +31,7 @@ a:focus {
   background: #fff;
   border: none;
   border-radius: 0;
-  margin-bottom: 20px;
+
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
 .navbar-nav {
@@ -285,10 +285,11 @@ a.article:hover {
 
   min-height: 100vh;
   transition: all 0.3s;
+  background-color: #f9f9f9;
 }
 
 .main-body .body-content {
-  padding: 20px 40px;
+  padding: 40px 40px;
 }
 .main-body .body-content .page-title h2 {
   font-size: 2em;
