--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,8 +17,21 @@
   right: 0;
   background-color: rgba(0, 0, 0, 0.4);
 }
+
 .login-left {
   margin-right: 50px;
+  background-color: #f9f9f9;
+}
+.signup {
+  background-color: #f9f9f9;
+}
+.signup .form-row {
+  padding: 5px 0;
+}
+.signup .form-row > .col,
+.form-row > [class*="col-"] {
+  padding-right: 20px;
+  padding-left: 5px;
 }
 .account-block .account-testimonial {
   text-align: center;
@@ -29,6 +42,9 @@
   bottom: 10vh;
   left: 0;
   right: 0;
+}
+.main-body {
+  background-color: #f9f9f9;
 }
 
 .text-theme {
