--- a/templates/login.html
+++ b/templates/login.html
@@ -10,18 +10,16 @@
             <div class="col-lg-6">
               <div class="login-left">
                 <div class="mb-5">
-                  <h3 class="h4 font-weight-bold text-theme">Login</h3>
+                  <h3 class="h4 font-weight-bold text-theme">Welcome back!</h3>
+                  <p class="text-muted mb-5">
+                    Enter your email address and password to login.
+                  </p>
                 </div>
-
-                <h6 class="h5 mb-0">Welcome back!</h6>
-                <p class="text-muted mt-2 mb-5">
-                  Enter your email address and password to login.
-                </p>
 
                 <form method="post">
                   {% csrf_token %}
                   <div class="form-group">
-                    <label for="exampleInputEmail1">Email</label>
+                    <label for="exampleInputEmail1">Username</label>
                     <input
                       type="text"
                       class="form-control"
@@ -65,9 +63,9 @@
       </div>
       <!-- end card -->
 
-      <p class="text-muted text-center mt-3 mb-0">
+      <p class="text-muted text-center mt-5 mb-0">
         Don't have an account?
-        <a href="register.html" class="text-primary ml-1">register</a>
+        <a href="{% url 'signupView' %}" class="text-primary ml-1">register</a>
       </p>
 
       <!-- end row -->
