--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,56 +7,140 @@
       <div class="card border-0">
         <div class="card-body p-0">
           <div class="row no-gutters">
-            <div class="col-lg-6">
-              <div class="login-left">
+            <div class="col-lg">
+              <div class="signup">
                 <div class="mb-5">
-                  <h3 class="h4 font-weight-bold text-theme">Login</h3>
-                </div>
-
-                <h6 class="h5 mb-0">Welcome back!</h6>
-                <p class="text-muted mt-2 mb-5">
-                  Enter your email address and password to login.
-                </p>
-
-                <form method="post">
-                  {% csrf_token %}
-                  <div class="form-group">
-                    <label for="exampleInputEmail1">Email</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="username"
-                      name="username"
-                    />
-                  </div>
-                  <div class="form-group mb-5">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input
-                      type="password"
-                      class="form-control"
-                      id="exampleInputPassword1"
-                      name="password"
-                    />
-                  </div>
-                  <button type="submit" class="btn btn-theme">Login</button>
-                  <a href="#l" class="forgot-link float-right text-primary"
-                    >Forgot password?</a
-                  >
-                </form>
-              </div>
-            </div>
-
-            <div class="col-lg-6 d-none d-lg-inline-block">
-              <div class="account-block rounded-right">
-                <div class="overlay rounded-right"></div>
-                <div class="account-testimonial">
-                  <h4 class="text-white mb-4">Let's be better humans!</h4>
-                  <p class="lead text-white">
-                    "Crime against the individual is the equivalent of crime
-                    against humanity."
+                  <h3 class="h4 font-weight-bold text-theme">
+                    Welcome to CFMS!
+                  </h3>
+                  <p class="text-muted mb-5">
+                    Enter your all the information to get started.
                   </p>
-                  <p>-Mahmoud Ahmadinejad</p>
                 </div>
+
+                <form>
+                  <div class="form-row">
+                    <div class="form-group col-md-4">
+                      <label for="inputEmail4">First Name</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="inputEmail4"
+                        name="firstName"
+                        placeholder="Email"
+                        required
+                      />
+                    </div>
+                    <div class="form-group col-md-3">
+                      <label for="inputEmail4">Last Name</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="inputEmail4"
+                        name="lastName"
+                        placeholder="Last Name"
+                        required
+                      />
+                    </div>
+                    <div class="form-group col-md-5">
+                      <label for="inputPassword4">Email</label>
+                      <input
+                        type="email"
+                        class="form-control"
+                        name="email"
+                        id="email"
+                        placeholder="someone@example.com"
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="form-row">
+                    <div class="form-group col-md-4">
+                      <label for="username">Username</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="username"
+                        name="username"
+                        placeholder="Username"
+                        required
+                      />
+                    </div>
+                    <div class="form-group col-md-4">
+                      <label for="inputPassword">Password</label>
+                      <input
+                        type="password"
+                        class="form-control"
+                        id="inputPassword"
+                        name="password"
+                        placeholder="Password"
+                        required
+                      />
+                    </div>
+                    <div class="form-group col-md-4">
+                      <label for="confirmpassword">Password</label>
+                      <input
+                        type="password1"
+                        class="form-control"
+                        id="confirmpassword"
+                        placeholder="Password"
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="form-row">
+                    <div class="form-group col-md-3">
+                      <label for="nid">NID number</label>
+                      <input
+                        type="number"
+                        class="form-control"
+                        id="nid"
+                        placeholder="NID number"
+                        required
+                      />
+                    </div>
+                    <div class="form-group col-md-3">
+                      <label for="inputcity">City</label>
+                      <select id="inputcity" class="form-control">
+                        <option selected>Choose...</option>
+                        <option>...</option>
+                      </select>
+                    </div>
+                    <div class="form-group col-md-3">
+                      <label for="inputdistrict">District</label>
+                      <select id="inputdistrict" class="form-control">
+                        <option selected>Choose...</option>
+                        <option>...</option>
+                      </select>
+                    </div>
+                    <div class="form-group col-md-3">
+                      <label for="inputupazila">Upazila</label>
+                      <select id="inputupazila" class="form-control">
+                        <option selected>Choose...</option>
+                        <option>...</option>
+                      </select>
+                    </div>
+                  </div>
+
+                  <div class="form-row">
+                    <div class="form-group col-md-3">
+                      <label for="inputaddress">Address</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="inputaddress"
+                        placeholder="House #5, R#2, Uttara"
+                        required
+                      />
+                    </div>
+                    <div class="form-group col-md-2">
+                      <label for="inputZip">Zip</label>
+                      <input type="number" class="form-control" id="inputZip" />
+                    </div>
+                  </div>
+
+                  <button type="submit" class="btn btn-primary">Sign up</button>
+                </form>
               </div>
             </div>
           </div>
@@ -66,8 +150,8 @@
       <!-- end card -->
 
       <p class="text-muted text-center mt-3 mb-0">
-        Don't have an account?
-        <a href="register.html" class="text-primary ml-1">register</a>
+        Do you have an account?
+        <a href="{% url 'loginView' %}" class="text-primary ml-1">Login</a>
       </p>
 
       <!-- end row -->
