--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,3 +56,17 @@
   border-color: #5369f8;
   color: #fff;
 }
+.missing-page .person img {
+  position: relative;
+}
+.missing-page .person .status {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: #fff;
+  padding: 0 5px;
+}
+
+.bg-color-light-red {
+  background-color: #dd6262;
+}
