--- a/templates/missing-person.html
+++ b/templates/missing-person.html
@@ -1,30 +1,49 @@
 {% extends "base.html" %} {% block css %} {% load static %}
 <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 {% endblock %} {% block main %}
-<div id="main-wrapper" class="container">
+<div id="main-wrapper" class="container missing-page">
   <div class="row">
-    <div class="col-md-3">
-      <a href="">
-        <div class="card" style="width: 18rem">
-          <img
-            class="card-img-top"
-            src="{% static 'files/missing-profile.jpeg' %}"
-            alt="Card image cap"
-          />
-          <div class="card-body">
-            <h3 class="card-text">Md. Firoz</h3>
-            <div class="row person-basic-info" style="font-size: 14px">
-              <div class="col-5">25 years old</div>
-              <div class="col-7">
-                <i class="bx bx-map"></i>Mohammadpur, Dhaka
+    {% if missingPersons %}
+    <div>
+      {% for person in missingPersons %}
+      <div class="col-md-3 person">
+        <a href="">
+          <div class="card" style="width: 18rem">
+            <img
+              class="card-img-top"
+              src="{% static 'files/missing-profile.jpeg' %}"
+              alt="Card image cap"
+            />
+            <div class="status">{{person.status}}</div>
+            <div class="card-body">
+              <h3 class="card-text">{{ person.name }}</h3>
+              <div class="row person-basic-info" style="font-size: 14px">
+                <div class="col-5">
+                  {% if person.birthdate|timesince|wordcount > 2 %}
+                  <span
+                    >{{ person.birthDate|timesince|truncatewords:2|slice:":-3"
+                    }}
+                  </span>
+
+                  {% else %}
+                  <span> {{ person.birthDate|timesince}} </span>
+                  {% endif %}
+                </div>
+                <div class="col-7">
+                  <i class="bx bx-map"></i>{{person.village}}, {{ person.city }}
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </a>
+        </a>
+      </div>
     </div>
-
-    <!-- Row -->
+    {% endfor %} {% else %}
+    <div>
+      <h2>No person in the list</h2>
+    </div>
+    {% endif %}
   </div>
+  <!-- Row -->
   {% endblock %}
 </div>
